--- a/kih.css
+++ b/kih.css
@@ -22,11 +22,19 @@ img.close-up{
   max-height: 190px;
 }
 
+img.screenshot {
+  max-width: 280px;
+  margin-left: -10px;
+}
+
 .screamer-strip{
   margin: -20px 0;
 }
 
-h2.screamer {
+h2.shift-up-24 {
   margin-top: 24px;
 }
 
+.content-head {
+  margin-bottom: 0;
+}
