--- a/pure-marketing.css
+++ b/pure-marketing.css
@@ -987,7 +987,7 @@ a.pure-button-primary {
  */
 
 .splash-container {
-    background: #1f8dd6;
+    background: #16a085;
     z-index: 1;
     overflow: hidden;
     /* The following styles are required for the "scroll-over" effect */
@@ -1057,22 +1057,25 @@ a.pure-button-primary {
 
 /* This is the class used for the content sub-headers (<h3>) */
 .content-subhead {
-    color: #1f8dd6;
+    color: #16a085;
 }
-    .content-subhead i {
-        margin-right: 7px;
-    }
+
+.content-subhead i {
+    margin-right: 7px;
+}
 
 /* This is the class used for the dark-background areas. */
 .ribbon {
-    background: #2d3e50;
+    background: #ecf0f1;
     color: #aaa;
 }
 
 /* This is the class used for the footer */
 .footer {
-    background: #111;
+    background: #16a085;
+    color: rgba(255, 255, 255, .8);
 }
+
 
 /*
  * -- TABLET (AND UP) MEDIA QUERIES --
@@ -1134,3 +1137,4 @@ a.pure-button-primary {
         font-size: 200%;
     }
 }
+
